# smooth-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package.json
.changeset/: README.md  config.json
.github/workflows/: pr-kind-deploy-smoke.yml  publish-nuget.yml  release.yml
adapters/: README.md
console/: .eslintrc.json  .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  sst.config.ts  tailwind.config.ts  tsconfig.json
console/app/: globals.css  layout.tsx
console/app/(app)/: layout.tsx  page.tsx
console/app/login/: actions.ts  page.tsx
console/components/: Badges.tsx  ConnectorForm.tsx  ConnectorRowActions.tsx  Header.tsx  SettingsForm.tsx  Sidebar.tsx  States.tsx
console/e2e/: console.smoke.spec.ts
console/lib/: admin-client.ts  config.ts  openauth.ts  rbac.ts  session.ts  types.ts
deploy/: README.md
deploy/k8s/: Chart.yaml  README.md  values.yaml
deploy/k8s/argocd/: application.yaml
deploy/k8s/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/scripts/: kind-smoke.sh
deploy/sst/: README.md  package.json  pnpm-lock.yaml  sst.config.ts  tsconfig.json
docs/: ACCESS-CONTROL.md  ADMIN-API.md  ARCHITECTURE.md  CONNECTORS.md  DEPLOY.md  DOCUMENT-SETS.md  DOTNET.md  EVALS.md  FEATURE-GAP-ANALYSIS.md  INDEXING.md  INGESTION.md  OBSERVABILITY.md  ONYX-TESTING-GAP-ANALYSIS.md  PROTOCOL.md  ROADMAP.md  STORAGE.md  TOOLS.md
docs/Architecture/: Polyglot Cores.md
dotnet/: README.md  SmooAI.SmoothAgent.slnx  SmooAI.SmoothOperator.slnx  SmooAI.SmoothOperatorAgent.slnx
dotnet/core/: README.md
dotnet/core/src/: AgentOptions.cs  AgentRunResponse.cs  SmooAI.SmoothOperator.Core.csproj  SmoothAgent.cs  SmoothAgentThread.cs
dotnet/core/tests/: CastTests.cs  ConversationTests.cs  CostTests.cs  EvalScenarios.cs  EvalTests.cs  HumanGateTests.cs  MockChatClient.cs
dotnet/server/: README.md
dotnet/server/aspnetcore/: ServiceCollectionExtensions.cs  SmooAI.SmoothOperator.Server.AspNetCore.csproj  SmoothOperatorWebSocketExtensions.cs
dotnet/server/host/: Dockerfile  Program.cs  README.md  (+1 more)
dotnet/server/host-tests/: HostBootTests.cs  MockChatClient.cs  SmooAI.SmoothOperator.Server.Host.Tests.csproj
dotnet/server/src/: Acl.cs  (+9 more)
dotnet/src/: EnumMemberStringConverter.cs  Hosting.cs  MeaiInterop.cs  ProtocolValidator.cs  SmooAI.SmoothAgent.csproj  SmooAI.SmoothOperator.csproj  SmooAI.SmoothOperatorAgent.csproj  SmoothAgentClient.cs  Transport.cs  Types.cs
dotnet/tests/: ClientTests.cs  ConformanceTests.cs  LiveE2ETests.cs  MeaiInteropTests.cs  MockTransport.cs  SerializationTests.cs  SmooAI.SmoothAgent.Tests.csproj  SmooAI.SmoothOperator.Tests.csproj  SmooAI.SmoothOperatorAgent.Tests.csproj  SpecPaths.cs
go/: README.md  e2e_live_test.go  go.mod
go/protocol/: client.go  turn.go  types_gen.go
python/: README.md  pyproject.toml
python/scripts/: generate.py
python/tests/: test_client.py  test_conformance.py  test_domain.py  test_e2e_live.py  test_robustness.py
rust/: Cargo.toml  README.md
rust/adapters/postgres/: Cargo.toml
rust/adapters/postgres/src/: embedder.rs  knowledge.rs  lib.rs  reranker.rs  schema.rs
rust/adapters/postgres/tests/: acl_persistence.rs  conformance.rs
rust/evals/: Cargo.toml
rust/ingestion/: Cargo.toml
rust/ingestion/src/: chunker.rs  connector.rs  embedder.rs  indexing.rs  lib.rs  pipeline.rs
rust/ingestion/src/connectors/: file.rs  github.rs  mod.rs  web.rs
rust/ingestion/tests/: github_connector.rs  incremental_indexing.rs  ingestion_contract.rs
rust/smooth-agent-server/: Cargo.toml
rust/smooth-operator/: Cargo.toml
rust/smooth-operator-agent-core/: Cargo.toml
rust/smooth-operator-agent-lambda/: Cargo.toml
rust/smooth-operator-agent-server/: Cargo.toml
rust/smooth-operator-agent-server/src/: handler.rs  lib.rs  main.rs  protocol.rs  runner.rs  server.rs  state.rs
rust/smooth-operator-agent-server/tests/: live_ws_e2e.rs  protocol_smoke.rs
rust/smooth-operator-agent-server/tests/common/: mod.rs
rust/smooth-operator-lambda/: Cargo.toml
rust/smooth-operator-server/: Cargo.toml
rust/smooth-operator-server/src/: admin.rs  config.rs  handler.rs  lib.rs  main.rs  protocol.rs  reranker.rs  runner.rs  server.rs  state.rs
rust/smooth-operator-server/tests/: acl_chat_leak.rs  admin_api.rs  live_ws_e2e.rs  protocol_smoke.rs
rust/smooth-operator-server/tests/common/: mod.rs
scripts/: sync-versions.mjs
spec/: README.md
spec/codegen/: README.md
spec/conformance/: fixtures.json
spec/events/: eventual-response.schema.json
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
typescript/scripts/: generate.ts
typescript/src/: client.ts  index.ts  transport.ts  types.ts  validate.ts
typescript/test/: client.test.ts  conformance.test.ts  e2e.live.test.ts  robustness.test.ts  types.test-d.ts
(+126 files in other folders)
