[package]
name = "smooai-smooth-operator-ingestion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge ingestion + connectors for smooth-operator — pull documents from sources (file/web), chunk, embed, and store them in the StorageAdapter knowledge slice so they're retrievable (Onyx-gap G1/G2/G9)."

[lib]
name = "smooth_operator_ingestion"

[dependencies]
smooth-operator = { workspace = true }
# Re-export the engine's KnowledgeBase / Document types through core.
smooai-smooth-operator-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
# Web connector: HTTP fetch (rustls, no native-tls) — same shape as the engine's
# fetch_url tool. URL parsing comes via fetch_url's re-exported SSRF guard.
reqwest = { workspace = true }

[dev-dependencies]
# Contract test wires the in-memory StorageAdapter (knowledge slice) end-to-end.
smooai-smooth-operator-adapter-memory = { path = "../adapters/in-memory" }
tokio = { workspace = true }
serde_json = { workspace = true }
# Temp dirs for the FileConnector test.
tempfile = "3"
