[package]
name = "smooai-smooth-operator-agent-adapter-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres + pgvector StorageAdapter for smooth-operator-agent — the dogfood backend (Postgres OLTP, PostgresCheckpointStore, pgvector hybrid retrieval)."

[lib]
name = "smooth_operator_agent_adapter_postgres"

[dependencies]
smooth-operator-agent-core = { workspace = true }
# `postgres` feature pulls in PostgresCheckpointStore (sync r2d2 path).
smooai-smooth-operator = { workspace = true, features = ["postgres"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

# Async OLTP CRUD (conversations / participants / messages / sessions / knowledge).
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
# Optional gateway-backed embeddings (OpenAI-compatible /v1/embeddings).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
# Throwaway pgvector-enabled Postgres for the conformance integration test.
testcontainers = "0.24"
